--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Пользователи</title>
@@ -9,6 +10,21 @@
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
+
+<header>
+    <a th:href="@{/}"><button type="button">На главную</button></a>
+
+    <div sec:authorize="isAuthenticated()">
+        <p sec:authentication="principal.username"></p>
+        <form class="form-inline" th:method="post" th:action="@{/logout}">
+            <button type="submit">Выйти</button>
+        </form>
+    </div>
+
+    <a th:href="@{/login}" sec:authorize="!isAuthenticated()">
+        <button type="submit">Войти</button>
+    </a>
+</header>
 
 <h1>Список пользователей</h1>
 
@@ -30,7 +46,7 @@
         <td th:text="${user.getEmail()}"></td>
         <td>
             <a th:href="@{/users/edit/{id}(id = ${user.getId()})}"><button type="button">изменить</button></a>
-            <form class="form-delete" th:method="delete" th:action="@{/users/{id}(id = ${user.getId()})}">
+            <form class="form-inline" th:method="delete" th:action="@{/users/{id}(id = ${user.getId()})}">
                 <button type="submit">удалить</button>
             </form>
         </td>
