--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -23,15 +23,14 @@ header > div {
     align-items: center;
 }
 
-header > div > p {
+header > div > a {
     flex-grow: 1;
-    margin: 0;
     padding: 0 20px;
     text-align: right;
 }
 
 h1 {
-    margin: 20px 20px 50px;
+    margin: 50px 20px;
     text-align: center;
 }
 
