--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -15,7 +15,7 @@
     <a th:href="@{/}"><button type="button">На главную</button></a>
 
     <div sec:authorize="isAuthenticated()">
-        <p sec:authentication="principal.username"></p>
+        <a th:href="@{/user}" sec:authentication="principal.username"></a>
         <form class="form-inline" th:method="post" th:action="@{/logout}">
             <button type="submit">Выйти</button>
         </form>
@@ -45,8 +45,8 @@
         <td th:text="${user.getAge()}"></td>
         <td th:text="${user.getEmail()}"></td>
         <td>
-            <a th:href="@{/users/edit/{id}(id = ${user.getId()})}"><button type="button">изменить</button></a>
-            <form class="form-inline" th:method="delete" th:action="@{/users/{id}(id = ${user.getId()})}">
+            <a th:href="@{/admin/edit/{id}(id = ${user.getId()})}"><button type="button">изменить</button></a>
+            <form class="form-inline" th:method="delete" th:action="@{/admin/{id}(id = ${user.getId()})}">
                 <button type="submit">удалить</button>
             </form>
         </td>
@@ -54,7 +54,7 @@
     </tbody>
 </table>
 
-<a th:href="@{/users/new}"><button type="button">Добавить</button></a>
+<a th:href="@{/admin/new}"><button type="button">Добавить</button></a>
 
 </body>
 </html>
