--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -13,6 +13,7 @@
 
 <header>
     <a th:href="@{/}"><button type="button">На главную</button></a>
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}"><button type="button">Администрирование</button></a>
 
     <div sec:authorize="isAuthenticated()">
         <a th:href="@{/user}" sec:authentication="principal.username"></a>
@@ -40,6 +41,18 @@
     <label for="email">Email:</label>
     <input id="email" type="text" th:field="*{email}">
     <span class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+
+    <label for="role">Роль:</label>
+    <select id="role" name="role" th:field="*{role}">
+        <option th:if="${user.getRole()} == null" th:value="null" th:text="null" selected></option>
+        <option th:each="role : ${roles}" th:value="${role.name()}" th:text="${role.name()}"></option>
+    </select>
+    <span class="error" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></span>
+
+    <div class="form-checkbox-container">
+        <label for="status">Активен:</label>
+        <input id="status" type="checkbox" th:field="*{enabled}">
+    </div>
 
     <button type="submit">Сохранить изменения</button>
 </form>
