--- a/src/main/resources/templates/users/info.html
+++ b/src/main/resources/templates/users/info.html
@@ -13,6 +13,7 @@
 
 <header>
     <a th:href="@{/}"><button type="button">На главную</button></a>
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}"><button type="button">Администрирование</button></a>
 
     <div sec:authorize="isAuthenticated()">
         <a th:href="@{/user}" sec:authentication="principal.username"></a>
@@ -45,7 +46,7 @@
         <td th:text="${user.getName()}"></td>
         <td th:text="${user.getAge()}"></td>
         <td th:text="${user.getEmail()}"></td>
-        <td th:text="${user.getRole().name()}"></td>
+        <td th:text="${user.getRole()} ? ${user.getRole().name()} : 'null'"></td>
         <td th:text="${user.isEnabled()} ? 'Активен' : 'Забанен'"></td>
     </tr>
     </tbody>
