--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -13,6 +13,7 @@
 
 <header>
     <a th:href="@{/}"><button type="button">На главную</button></a>
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}"><button type="button">Администрирование</button></a>
 
     <div sec:authorize="isAuthenticated()">
         <a th:href="@{/user}" sec:authentication="principal.username"></a>
@@ -35,6 +36,8 @@
         <th>Имя</th>
         <th>Возраст</th>
         <th>Почта</th>
+        <th>Роль</th>
+        <th>Статус</th>
         <th>Управление</th>
     </tr>
     </thead>
@@ -44,6 +47,8 @@
         <td th:text="${user.getName()}"></td>
         <td th:text="${user.getAge()}"></td>
         <td th:text="${user.getEmail()}"></td>
+        <td th:text="${user.getRole()} ? ${user.getRole().name()} : 'null'"></td>
+        <td th:text="${user.isEnabled()} ? 'Активен' : 'Забанен'"></td>
         <td>
             <a th:href="@{/admin/edit/{id}(id = ${user.getId()})}"><button type="button">изменить</button></a>
             <form class="form-inline" th:method="delete" th:action="@{/admin/{id}(id = ${user.getId()})}">
