--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
 
 <header>
     <a th:href="@{/}"><button type="button">На главную</button></a>
+    <a sec:authorize="hasRole('ADMIN')" th:href="@{/admin}"><button type="button">Администрирование</button></a>
 
     <div sec:authorize="isAuthenticated()">
         <a th:href="@{/user}" sec:authentication="principal.username"></a>
@@ -27,7 +28,7 @@
 </header>
 
 <h1>Добро пожаловать!</h1>
-<a th:href="@{/user}"><button type="button">Мой аккаунт</button></a>
+<a sec:authorize="isAuthenticated()" th:href="@{/user}"><button type="button">Мой аккаунт</button></a>
 
 </body>
 </html>
